# llm-tools-obsidian-local-rest-api

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
plugin/: llm_tools_obsidian_local_rest_api.py
tests/: llm_tools_obsidian_local_rest_api_test.py
